# deepfake_detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: azure-static-web-apps-thankful-sky-0e4384200.yml
results/: evaluation_report.txt
src/api/: engine.py  main.py
src/core_ml/: evaluate.py  model.py  preprocess.py  train.py
static/: index.html  script.js  style.css
